prescoring errors unit-tests
