# src/main/java/ru/neoflex/learning/creaditpipeline/conveyor/controller/ConveyorExceptionHandler.java
@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.openapitools.model.ErrorMessage;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -19,21 +18,19 @@ import java.time.OffsetDateTime;
 public class ConveyorExceptionHandler {
 
     @ExceptionHandler(PrescoringException.class)
-    @ResponseStatus(value = HttpStatus.UNPROCESSABLE_ENTITY, reason = "Prescoring Error")
-    public ResponseEntity<ErrorMessage> handlePrescoringException(HttpServletRequest request, PrescoringException e) {
+    @ResponseStatus(value = HttpStatus.UNPROCESSABLE_ENTITY)
+    public ErrorMessage handlePrescoringException(HttpServletRequest request, PrescoringException e) {
         log.error("handlePrescoringException() - exception = {}", ExceptionUtils.getStackTrace(e));
 
-        final ErrorMessage errorMessage = getErrorMessage(request, HttpStatus.UNPROCESSABLE_ENTITY, e);
-        return ResponseEntity.unprocessableEntity().body(errorMessage);
+        return getErrorMessage(request, HttpStatus.UNPROCESSABLE_ENTITY, e);
     }
 
     @ExceptionHandler(ScoringException.class)
-    @ResponseStatus(value = HttpStatus.UNPROCESSABLE_ENTITY, reason = "Scoring Error")
-    public ResponseEntity<ErrorMessage> handleScoringException(HttpServletRequest request, ScoringException e) {
+    @ResponseStatus(value = HttpStatus.UNPROCESSABLE_ENTITY)
+    public ErrorMessage handleScoringException(HttpServletRequest request, ScoringException e) {
         log.error("handleScoringException() - exception = {}", ExceptionUtils.getStackTrace(e));
 
-        final ErrorMessage errorMessage = getErrorMessage(request, HttpStatus.UNPROCESSABLE_ENTITY, e);
-        return ResponseEntity.unprocessableEntity().body(errorMessage);
+        return getErrorMessage(request, HttpStatus.UNPROCESSABLE_ENTITY, e);
     }
 
     private ErrorMessage getErrorMessage(HttpServletRequest request, HttpStatus status, Exception e) {
