# src/main/resources/openapi/conveyor_api.yaml
@@ -34,6 +34,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListLoanOfferDto'
+        400:
+          description: 'Bad Request'
         422:
           description: 'Unporcessable Entity'
           content:
@@ -61,6 +63,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CreditDto'
+        400:
+          description: 'Bad Request'
+        422:
+          description: 'Unporcessable Entity'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
 components:
   schemas:
     LoanApplicationRequestDto:
@@ -117,16 +127,25 @@ components:
           type: string
           minLength: 4
           maxLength: 4
-          pattern: '\\d{4}'
+          pattern: '[0-9]{4}'
           description: 'Серия паспорта'
           example: '0000'
         passportNumber:
           type: string
           minLength: 6
           maxLength: 6
-          pattern: '\\d{4}'
+          pattern: '[0-9]{6}'
           description: 'Номер паспорта'
           example: '000000'
+      required:
+        - firstName
+        - lastName
+        - amount
+        - term
+        - passportNumber
+        - passportSeries
+        - email
+        - birthdate
     ListLoanOfferDto:
       type: array
       description: 'Список кредитных предложений'
@@ -227,14 +246,14 @@ components:
           type: string
           minLength: 4
           maxLength: 4
-          pattern: '\\d{4}'
+          pattern: '[0-9]{4}'
           description: 'Серия паспорта'
           example: '0000'
         passportNumber:
           type: string
           minLength: 6
           maxLength: 6
-          pattern: '\\d{4}'
+          pattern: '[0-9]{6}'
           description: 'Номер паспорта'
           example: '000000'
         passportIssueDate:
@@ -264,7 +283,7 @@ components:
           $ref: '#/components/schemas/EmploymentDto'
         account:
           type: string
-          pattern: '\\d{20}'
+          pattern: '[0-9]{20}'
           description: 'Номер счета'
           example: '09876543211234567890'
         isInsuranceEnabled:
@@ -330,7 +349,7 @@ components:
           example: 'EMPLOYED'
         employerInn:
           type: string
-          pattern: '\\d{10,12}'
+          pattern: '[0-9]{10,12}'
           description: 'ИНН'
           example: '123456789012'
         salary:
